fantasycourt.nl/themes/fantasy-court/assets/css/_footer.scss
footer {
  background-repeat: repeat-x;
  overflow: hidden;
  background-size: contain;
  @media screen and (max-width: $mobileWidth) {
    background-size: cover;
  }
  color: $textColorInverted;
  padding: 40px;

  .footer-content {
    width: $containerWidth;
    max-width: 100%;
    margin: 0 auto;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: flex-start;

    div {
      width: $containerWidth/2;
      max-width: 100%;
      flex-direction: column;
      align-items: flex-start;
      margin-bottom: 1em;
      text-align: center;

      * {
        margin: 0px
      }
      p {
        font-size: 0.7em;
      }
    }
  }
}

